Changes in @NEW@:
  o New Features:

  o Bug Fixes:

  o Internal Changes:

Changes in 2.1.15:
  o New Features:
    * Recipes that have a class member list named 'pathIdSearchBranches' will
      search the branches defined in the list for pathIds to reuse while 
      cooking. (CNY-3398)

  o Bug Fixes:
    * Build groups whose flavors end up identical now causes one of those
      builds to be discarded rather than an exception about "maximum
      recursion depth exceeded" (CNY-3401)
    * Optimized population of lookaside cache for recipes containing large 
      numbers of source actions such that it is *much* faster. (CNY-3406)
    * Conary proxies will no longer cache changesets that were
      truncated in transit. Additionally, clients will produce a more
      useful error message if they download a truncated changeset.  (CNY-3140)
    * The filewrap and wrapdir options for r.Run() previously did not
      wrap fopen64 or freopen64. (CNY-3405)
    * Previously, user and password information for the http/https proxy
      were visible in a traceback if a network exception occured. (RBL-5191)
    * Split out info packages from jobs even when RPM capsules are
      used (CNY-3387)
    * Modified lookaside cache file structure to include URL parameters, 
      fragments and ports to better generate a unique file path for a given 
      URL (CNY-3408)

Changes in 2.1.14:
  o Bug Fixes:
    * Disable diff/patch merging for RPM config files (CNY-3399)

  o New Features:
    * Added support for RPM capsules to ChangesetExploder class

  o Internal Changes:
    * Added file flags to allow conary to override file contents and attributes
      for capsule-based files (such as from RPM).
    * Changesets are now loaded incrementally rather than as one big string;
      this avoids a potentially large memory spike opening large changesets
    * Added slots to various stream and trove objects
    * StreamCollections are intialized as if thawing an empty string rather