@@ -77,6 +77,14 @@ DIRNAMES        = 1118
 PAYLOADFORMAT     = 1124
 PAYLOADCOMPRESSOR = 1125
 FILECOLORS      = 1140
+# BLINK*, FLINK*, and TRIGGERPREIN included from SUSE fork of RPM
+BLINKPKGID      = 1164
+BLINKHDRID      = 1165
+BLINKNEVRA      = 1166
+FLINKPKGID      = 1167
+FLINKHDRID      = 1168
+FLINKNEVRA      = 1169
+TRIGGERPREIN    = 1170
 
 SIG_BASE        = 256
 SIG_SHA1        = 269
